# malkoha

./: .envrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  default.nix  flake.nix  pyproject.toml
.github/workflows/: nix.yml
malkoha/: __init__.py  command.py  data.py  decorator.py  extract.py
tests/: test_trace.py
tests/res/test_package/: pyproject.toml
tests/res/test_package/test_package/: __init__.py
